# Pandora

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  config_example.yaml  config_example_sliding_window.yaml  pyproject.toml  setup.cfg
.github/actions/test-pandora-cli/: action.yml
.github/workflows/: documentation.yaml  test-pandora.yml
docs/: cli_config.rst  conf.py  getting_started.rst  index.rst  install.rst  requirements.txt  usage.rst
docs/_static/cayonu_results/: cayonu.eval  cayonu.evec  dataset.pickle  pandora.supportValues.csv  pandora.supportValues.projected.csv
docs/examples/: eigen_interface.rst  example.rst  numpy_interface.rst  plotting.rst  r_import_export.rst
etc/: environment.yml
example/: example.embedding_population.txt  example.geno  example.snp  example_sliding_window.geno  example_sliding_window.snp
example/results_sliding_window/: example_sliding_window.eval  example_sliding_window.evec  pandora.replicates.csv  pandora.supportValues.pairwise.csv  pandora.txt  pandora.yaml
example/results_sliding_window/windows/: window_0.eval  window_0.evec  window_1.eval  window_1.evec  window_2.eval  window_2.evec  window_3.eval  window_3.evec  window_4.eval  window_4.evec  window_5.eval  window_5.evec  window_6.eval  window_6.evec  window_7.eval  window_7.evec  window_8.eval  (+3 more)
pandora/: __init__.py  bootstrap.py  bootstrapping.py  comparison.py  compression.py  converter.py  custom_errors.py  custom_types.py  dataset.py  dimensionality_reduction.py  dimensionality_reduction_comparison.py  distance_metrics.py  embedding.py  embedding_comparison.py  imputation.py  logger.py  main.py  pandora.py  pca.py  pca_comparison.py  pca_runner.py  plotting.py  postprocessing.py  sliding_window.py  utils.py
tests/: conftest.py  test_bootstrap.py  test_config.py  test_convertf.py  test_dataset.py  test_dimensionality_reduction.py  test_dimensionality_reduction_comparison.py  test_distance_metrics.py  test_embedding.py  test_embedding_comparison.py  test_imputation.py  test_pandora.py  test_pca.py  test_pca_comparison.py  test_plotting.py  test_sliding_window.py
tests/data/: example.geno  example.ind  example.snp  example_populations.txt  example_sliding_window.ind  test_config.yaml  test_config_ped_format.yaml  test_config_sliding_window.yaml  test_config_with_embedding_populations.yaml  test_config_with_pca_populations.yaml
(+20 files in other folders)
