[build-system]
requires = ['setuptools', 'wheel']

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
known_first_party = "pandora"
skip_glob = '\.eggs/*,\.git/*,\.venv/*,build/*,dist/*'
default_section = 'THIRDPARTY'

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true

[tool.pytest.ini_options]
# This will be pytest's future default.
addopts = "--import-mode=importlib"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.docformatter]
wrap-summaries = 120
wrap-description = 120
black = true
