[metadata]
name = Pandora
description = PCA uncertainty estimation toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tschuelia/Pandora
author = Julia Haag
author_email = julia.haag@h-its.org
version = 0.0.0
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = true
install_requires =
    numpy
    pandas
    pyarrow
    plotly
    scipy
    pyyaml
    scikit-learn >= 1.0
python_requires = >=3.8
package_dir=
    =.
packages = find:

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    pandora = pandora.main:main
